# glob2

./: .cproject  .cvsignore  .gitignore  .hgignore  .hgtags  .mailmap  .project  .travis.yml  AUTHORS  CMakeLists.txt  DONE  Doxyfile  Glob2Edit.dsp  INSTALL  Info-Globulation2.plist  Makefile  Makefile.am  README  README.cvs  README.hg  README.md  SConstruct  TODO  TODO.Eli  acconfig.h  bootstrap  checks.xml  configure.in  cppunit.pri  default.map  description-pak  gen_inst_uninst_list.py  getdata  getgfx  getmap  glob2.dsp  glob2.dsw  glob2.sln  glob2.vcproj  glob2.vcxproj  (+16 more)
campaigns/: SConscript  (+6 more)
data/: Makefile.am  SConscript  authors.txt  buildings.data  buildings.default.txt  buildings.txt  check_translations.py  glob2.desktop  gui01.data  gui02.data  gui03.data  gui05.data  guiedit.data  guiscr.txt  keyboard-gui.default.txt  keyboard-mapedit.default.txt  makedata.bat  misc.data  nicowar.default.txt  nicowar.txt  pal.txt  ressources.data  ressources.txt  ressources.xml  terrain.data  texts.ar.txt  texts.br.txt  texts.ca.txt  texts.cz.txt  texts.de.txt  texts.dk.txt  texts.en.txt  texts.eo.txt  texts.es.txt  texts.eu.txt  texts.fa.txt  texts.fi.txt  texts.fr.txt  texts.gr.txt  texts.hu.txt  (+21 more)
data/campaigns/: SConscript  Tutorial_Campaign.txt  tutorial-part3.map
data/fonts/: Makefile.am  SConscript
data/gfx/: .cvsignore  Makefile.am  SConscript  doit.sh  mkmini.perl  mkmini.sh
data/gfx/cursor/: Makefile.am  SConscript
data/gfx/gui/: SConscript
data/gui/: .cvsignore  Makefile.am  SConscript
data/icons/: Makefile.am  SConscript
data/maps/: Garden_3.map  Holiday_Island_2.map  Muka.map  SConscript  Scarse_Supply.map  Triangle.map  Wild_River.map  newislands_green_blue.map  weakness.map
data/scripts/: tutorial_part2.sgsl  tutorial_part4.sgsl
data/translations/: SConscript  texts.cz.txt  texts.de.txt  texts.dk.txt  texts.es.txt  texts.incomplete.txt  texts.it.txt  texts.sr.txt  texts.zh-cn.txt
data/usl/: SConscript
data/usl/Glob2/: SConscript
data/usl/Language/: SConscript
data/zik/: .cvsignore  Makefile.am  SConscript
data/zik/original/: SConscript
libgag/: CMakeLists.txt  SConscript
libgag/include/: BinaryStream.h  CursorManager.h  DX9GraphicContext.h  Environment.h  EventListener.h  FileManager.h  FormatableString.h  GAG.h  GAGSys.h  GUIAnimation.h  GUIBase.h  GUIButton.h  GUICheckList.h  GUIFileList.h  GUIImage.h  GUIKeySelector.h  GUIList.h  GUIMessageBox.h  GUINumber.h  GUIPanel.h  GUIProgressBar.h  GUIRatio.h  GUISelector.h  GUIStyle.h  GUITabScreen.h  GUITabScreenWindow.h  GUIText.h  GUITextArea.h  GUITextInput.h  GraphicContext.h  KeyPress.h  Makefile.am  SConscript  SDLCompat.h  SDLGraphicContext.h  Stream.h  StreamBackend.h  StreamFilter.h  StringTable.h  SupportFunctions.h  (+8 more)
libgag/src/: .cvsignore  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  CursorManager.cpp  EventListener.cpp  FileManager.cpp  FormatableString.cpp  GAG.cpp  GLGraphicContext.cpp  GLGraphicContext.h  GUIAnimation.cpp  GUIBase.cpp  GUIButton.cpp  GUICheckList.cpp  GUIFileList.cpp  GUIImage.cpp  GUIKeySelector.cpp  GUIList.cpp  GUIMessageBox.cpp  GUINumber.cpp  GUIPanel.cpp  GUIProgressBar.cpp  GUIRatio.cpp  GUISelector.cpp  GUIStyle.cpp  GUITabScreen.cpp  GUITabScreenWindow.cpp  GUIText.cpp  GUITextArea.cpp  GUITextInput.cpp  GraphicContext.cpp  KeyPress.cpp  Makefile.am  SConscript  SDLFont.cpp  SDLFont.h  SDLGraphicContext.cpp  SDLGraphicContext.h  SDLSprite.cpp  (+22 more)
libusl/src/: CMakeLists.txt  Makefile.am  SConscript  bytecode.cpp  bytecode.h  code.cpp  code.h  context.h  debug.cpp  debug.h  error.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  memory.cpp  memory.h  native.h  parser.cpp  parser.h  position.cpp  position.h  scanner.cpp  scanner.h  test.cpp  token.cpp  token.h  tokenizer.cpp  tokenizer.h  tree.cpp  tree.h  types.cpp  types.h  usl.cpp  usl.h
src/: .cvsignore  AI.cpp  AI.h  AICastor.cpp  AICastor.h  AIDescriptionScreen.cpp  AIDescriptionScreen.h  AIEcho.cpp  AIEcho.h  AIHelper.cpp  AIHelper.h  AIImplementation.cpp  AIImplementation.h  AINames.cpp  AINames.h  AINicowar.cpp  AINicowar.h  AINull.cpp  AINull.h  AINumbi.cpp  AINumbi.h  AIOldNicowar.cpp  AIOldNicowar.h  AIToubib.cpp  AIToubib.h  AIWarrush.cpp  AIWarrush.h  BasePlayer.cpp  BasePlayer.h  BaseTeam.cpp  BaseTeam.h  BitArray.cpp  BitArray.h  Brush.cpp  Brush.h  Building.cpp  Building.h  BuildingType.cpp  BuildingType.h  BuildingUtils.cpp  (+496 more)
src/AI/: AINames.cpp  AINicowar.cpp  AINull.h  AINumbi.h  AIWarrush.h
src/ai/: AI.cpp  AI.h  AICastor.h  AINumbi.cpp
src/campaign/: CampaignMainMenu.h  CampaignSelectorScreen.h
src/game/: GameEvent.h  GameGUI.h  GameGUIDialog.h  GameGUIGhostBuildingManager.cpp  GameGUILoadSave.cpp  GameGUIMessageManager.cpp  GameGUIToolManager.cpp  GameHints.cpp  GameHints.h  GameObjectives.h  GameUtilities.cpp  GameUtilities.h  SConscript
src/irc/: IRCThread.cpp
src/lan/: LANGameInformation.h  LANMenuScreen.cpp
src/libgag/: FormatableString.h  GAG.h  GAGSys.h  GUIAnimation.h  GUIBase.h  GUIFileList.h  GUIRatio.cpp  GUISelector.h  GUITabScreenWindow.cpp  GUIText.cpp  GraphicContext.h  SConscript  SConscript_include  Stream.cpp  Stream.h  StreamFilter.cpp  StreamFilter.h  TextSort.cpp  win32_dirent.cpp
src/libusl/src/: SConscript  code.h  memory.cpp  tokenizer.cpp  types.h  usl.h
src/libwee/: container.cpp  container.h  gc.h
src/map/: MapEditKeyActions.cpp  MapEditKeyActions.h  MapGenerator.h  MapScriptError.h  MapScriptUSL.cpp
src/multiplayer/: MultiplayerGame.h  MultiplayerGameEvent.cpp  MultiplayerGameEvent.h  MultiplayerGameEventListener.cpp  MultiplayerGameEventListener.h  MultiplayerGameScreen.cpp
src/net/: NetBroadcaster.cpp  NetConnection.cpp  NetEngine.cpp  NetGamePlayerManager.cpp  NetReteamingInformation.h
src/testing/: SConscript  add_game_event.py  add_multiplayer_event.py  add_net_thread_message.py  add_yog_event.py
src/unit/: UnitConsts.h  UnitEditorScreen.cpp  UnitSkin.h
src/yog/: SConscript  YOGAfterJoinGameInformation.cpp  YOGAfterJoinGameInformation.h  YOGGameInfo.h  YOGGameResults.cpp  YOGPlayerPrivateInfo.h  YOGRegisterScreen.h
(+324 files in other folders)
