bin_PROGRAMS = glob2

glob2_SOURCES= AI.cpp \
AI.h\
Building.cpp\
Building.h\
BuildingType.cpp\
BuildingType.h\
CVS\
Engine.cpp\
Engine.h\
EntityType.cpp\
EntityType.h\
Fatal.cpp\
Fatal.h\
GUIMapPreview.h \
GUIMapPreview.cpp \
Game.cpp\
Game.h\
GameGUI.cpp\
GameGUI.h\
GameGUIDialog.cpp\
GameGUIDialog.h\
GameGUILoadSave.cpp\
GameGUILoadSave.h\
Glob2.cpp\
Glob2.h\
GlobalContainer.cpp\
GlobalContainer.h\
Header.h\
Makefile.am\
Map.cpp\
Map.h\
MapGenerator.cpp\
MapEdit.cpp\
MapEdit.h\
NetConsts.h\
NetGame.cpp\
NetGame.h\
Order.cpp\
Order.h\
Player.cpp\
Player.h\
PreparationGui.cpp\
PreparationGui.h\
Race.cpp\
Race.h\
Session.cpp\
Session.h\
StringTable.cpp\
StringTable.h\
SGSL.cpp \
SGSL.h \
Team.cpp\
Team.h\
TeamStat.h\
TeamStat.cpp\
Unit.cpp\
Unit.h\
UnitType.cpp\
UnitType.h\
Utilities.cpp\
Utilities.h \
CustomGameScreen.h \
CustomGameScreen.cpp \
LoadGameScreen.h \
LoadGameScreen.cpp \
MainMenuScreen.h \
MainMenuScreen.cpp \
MultiplayersOfferScreen.h\
MultiplayersOfferScreen.cpp \
YOGScreen.h \
YOGScreen.cpp \
SettingsScreen.h \
SettingsScreen.cpp \
MultiplayersHostScreen.h \
MultiplayersHostScreen.cpp \
MultiplayersHost.h \
MultiplayersHost.cpp \
MultiplayersJoinScreen.h \
MultiplayersJoinScreen.cpp \
MultiplayersJoin.h \
MultiplayersJoin.cpp \
MultiplayersConnectedScreen.h \
MultiplayersConnectedScreen.cpp \
MultiplayersChooseMapScreen.h \
MultiplayersChooseMapScreen.cpp \
MultiplayersCrossConnectable.h \
MultiplayersCrossConnectable.cpp \
NonANSICStdWrapper.h \
NewMapScreen.h \
NewMapScreen.cpp \
YOG.h \
YOG.cpp  \
MapGenerationDescriptor.h \
MapGenerationDescriptor.cpp \
LogFileManager.h \
LogFileManager.cpp \
YOGPreScreen.cpp \
ScriptEditorScreen.h \
ScriptEditorScreen.cpp

glob2_LDADD=-lSDL_net -lSDL_image @FT2_LIBS@ @SDL_LIBS@ ../libgag/src/libgag.a
INCLUDES = @FT2_CFLAGS@ @SDL_CFLAGS@ -I@srcdir@/../libgag/include
