bin_PROGRAMS = glob2

glob2_SOURCES=\
IntBuildingType.h\
IntBuildingType.cpp\
AI.cpp \
AI.h\
AIImplementation.h\
AINull.h\
AINull.cpp\
AINumbi.h\
AINumbi.cpp\
AICastor.h\
AICastor.cpp\
AIToubib.h\
AIToubib.cpp\
Building.cpp\
Building.h\
BuildingType.cpp\
BuildingType.h\
Bullet.h\
Bullet.cpp\
CVS\
Engine.cpp\
Engine.h\
EntityType.cpp\
EntityType.h\
Fatal.cpp\
Fatal.h\
GUIGlob2FileList.h \
GUIGlob2FileList.cpp \
GUIMapPreview.h \
GUIMapPreview.cpp \
Game.cpp\
Game.h\
GameGUI.cpp\
GameGUI.h\
GameGUIDialog.cpp\
GameGUIDialog.h\
GameGUILoadSave.cpp\
GameGUILoadSave.h\
Glob2.cpp\
Glob2.h\
GlobalContainer.cpp\
GlobalContainer.h\
Settings.cpp\
Settings.h\
Header.h\
Makefile.am\
Map.cpp\
Map.h\
MapGenerator.cpp\
MapEdit.cpp\
MapEdit.h\
NetConsts.h\
NetGame.cpp\
NetGame.h\
Order.cpp\
Order.h\
Player.cpp\
Player.h\
SessionConnection.cpp\
SessionConnection.h\
Race.cpp\
Race.h\
Ressource.h\
Ressource.cpp\
Sector.h\
Sector.cpp\
Session.cpp\
Session.h\
SGSL.cpp \
SGSL.h \
SoundMixer.cpp \
SoundMixer.h \
Team.cpp\
Team.h\
TeamStat.h\
TeamStat.cpp\
Unit.cpp\
Unit.h\
UnitType.cpp\
UnitType.h\
Utilities.cpp\
Utilities.h \
CustomGameScreen.h \
CustomGameScreen.cpp \
LoadGameScreen.h \
LoadGameScreen.cpp \
MainMenuScreen.h \
MainMenuScreen.cpp \
CreditScreen.h \
CreditScreen.cpp \
CampaignScreen.h \
CampaignScreen.cpp \
MultiplayersOfferScreen.h\
MultiplayersOfferScreen.cpp \
YOGScreen.h \
YOGScreen.cpp \
SettingsScreen.h \
SettingsScreen.cpp \
MultiplayersHostScreen.h \
MultiplayersHostScreen.cpp \
MultiplayersHost.h \
MultiplayersHost.cpp \
MultiplayersJoinScreen.h \
MultiplayersJoinScreen.cpp \
MultiplayersJoin.h \
MultiplayersJoin.cpp \
MultiplayersConnectedScreen.h \
MultiplayersConnectedScreen.cpp \
MultiplayersChooseMapScreen.h \
MultiplayersChooseMapScreen.cpp \
MultiplayersCrossConnectable.h \
MultiplayersCrossConnectable.cpp \
NonANSICStdWrapper.h \
NewMapScreen.h \
NewMapScreen.cpp \
YOG.h \
YOG.cpp  \
MapGenerationDescriptor.h \
MapGenerationDescriptor.cpp \
LogFileManager.h \
LogFileManager.cpp \
YOGPreScreen.h \
YOGPreScreen.cpp \
ScriptEditorScreen.h \
ScriptEditorScreen.cpp \
EndGameScreen.h \
EndGameScreen.cpp \
Marshaling.h \
YOGConsts.h \
NetDefine.h \
Version.h \
RessourceType.h \
TerrainType.h \
UnitConsts.h \
ConfigFiles.h \
EntitiesTypes.h \
BuildingsTypes.h \
BuildingsTypes.cpp \
RessourcesTypes.h \
GameUtilities.h \
GameUtilities.cpp \
BitArray.h \
BitArray.cpp \
Brush.h \
Brush.cpp \
IRC.h \
IRC.cpp

glob2_LDADD = @LIBS@ @FT2_LIBS@ @SDL_LIBS@ @VORBISFILE_LIBS@ @VORBIS_LIBS@ ../libgag/src/libgag.a
INCLUDES = @FT2_CFLAGS@ @SDL_CFLAGS@ @VORBIS_CFLAGS@ -I@srcdir@/../libgag/include
